fixed question-section not showing up after restart, edited some comments

--- a/code/style.css
+++ b/code/style.css
@@ -73,6 +73,10 @@ select {
   display: inline;
 }
 
+.guesses {
+  display: inline;
+}
+
 .game-log {
   border: 3px solid white;
   border-radius: 3px;
